Update file. Commit #2

--- a/notebook/laptop_EDA.ipynb
+++ b/notebook/laptop_EDA.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
    "source": [
     "# Tải dataset\n",
     "# Thay đổi đường dẫn phù hợp với vị trí file của bạn\n",
-    "df = pd.read_csv('D:\\GitHub-live-project\\laptop-project\\data\\laptop_prices.csv')\n",
+    "df = pd.read_csv('\\data\\laptop_prices.csv')\n",
     "\n",
     "print(f'Kích thước dataset: {df.shape}')\n",
     "print(f'Các cột: {df.columns.tolist()}')\n",
